# xu-ai-news-rag

./: .gitignore  README.md
.github/workflows/: ci.yml
backend/: .coverage  .env  .env.example  README.md  pyproject.toml
backend/src/backend/: app.py  config.py  models.py
backend/src/backend/auth/: routes.py
backend/src/backend/routes/: main.py
backend/src/backend/services/: aggregation.py  clustering.py  custom_cross_encoder.py  custom_llm.py  embedding.py  feeds.py  knowledge_base.py  notification.py  search.py
backend/tests/: conftest.py  test_aggregation.py  test_auth.py  test_clustering.py  test_clustering_service.py  test_custom_cross_encoder.py  test_custom_llm.py  test_documents.py  test_feeds.py  test_notification.py  test_reports.py  test_search.py  test_search_logic.py  test_search_service.py
backend/tests/testdata/: rss.xml
docs/: PRD.md  high-level-design.md  prompt.md  prototype-design.md  technical-architecture.md
frontend/: package-lock.json  package.json
frontend/src/: App.js  App.test.js
frontend/src/api/: axiosConfig.js
frontend/src/components/Auth/: Login.js  Register.js
frontend/src/components/Auth/__tests__/: Login.test.js  Register.test.js
frontend/src/components/Common/: Header.js  PrivateRoute.js
frontend/src/components/Common/__tests__/: Header.test.js  PrivateRoute.test.js
frontend/src/components/Dashboard/: DocumentList.js  FeedManager.js  Reports.js  SearchBar.js  UploadForm.js
frontend/src/pages/: AuthPage.js  DashboardPage.js
frontend/src/pages/__tests__/: AuthPage.test.js
(+5 files in other folders)
